# MyST-Parser

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  codecov.yml  docstring.fmt.mustache  example-include.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  syntax.xml  test.md  test.rst  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-documentation.yml  bug_report.md  config.yml  documentation-improvements.md
.github/workflows/: artifact.yml  copilot-setup-steps.yml  docutils_setup.py  test-formats.yml  tests.yml
docs/: .gitignore  Makefile  conf.py  configuration.md  docutils.md  examples.md  index.md  intro.md  kesten_processes.md  live-preview.md  live_preview.py  package_api.md  requirements.txt  syntax.md  test-bib.yaml  test.ipynb  wealth_dynamics_md.md  wealth_dynamics_rst.rst
docs/_static/: custom.css  local.css
docs/api/: directive.rst  index.md  parsers.md  reference.rst  renderers.md  renderers.rst  sphinx_parser.rst  tokens.rst
docs/bibtex_test/: example_md.md  example_rst.rst  index.md  references2.bib  references3.bib
docs/changelog-fragments.d/: .CHANGELOG-TEMPLATE.md.j2  README.md
docs/develop/: _changelog.md  architecture.md  background.md  contributing.md  extending.md  index.md  test_infrastructure.md
docs/examples/: heavy_tails.md  index.md  kesten_processes.md  notebooks.ipynb  references.bib  wealth_dynamics_md.md  wealth_dynamics_rst.rst
docs/explain/: index.md
docs/faq/: index.md
docs/faq/snippets/: include-md.md
docs/sphinx/: faq.md  index.md  intro.md  reference.md  roles-and-directives.md  use.md
docs/sphinx/snippets/: include-rst.rst
docs/syntax/: admonitions.md  code_and_apis.md  cross-referencing.md  example.txt  glossary.md  images_and_figures.md  math.md  optional.md  organising_content.md  reference.md  roles-and-directives.md  subsection.md  syntax-optional.md  syntax.md  tables.md  typography.md
docs/syntax/examples/: content_child1.md  content_child2.md  example.py  example_relative_include.txt
docs/test/: md.md  rst.rst
docs/using/: benchmark.md  faq.md  howto.md  index.md  install.md  intro.md  on_rtd.md  sphinx.md  syntax-optional.md  syntax.md  use_api.md
docs/using/snippets/: include-md.md
jupyter_db/: __init__.py  main.py  orm.py
jupyter_sphinx/: __init__.py  components.py  executor.py  main.py
myst_parser/: __init__.py  _compat.py  _docs.py  ast_renderer.py  autodoc.py  bibliography.py  block_tokens.py  cli.py  dc_validators.py  directives.py  docutils_.py  docutils_renderer.py  html_renderer.py  html_to_nodes.py  inventory.py  json_renderer.py  main.py  mathjax.py  mocking.py  myst_amsmath.py  myst_refs.py  nested_refs.py  parse_directives.py  parse_html.py  slugs.py  span_tokens.py  sphinx_.py  sphinx_parser.py  sphinx_renderer.py  utils.py  warnings.py  warnings_.py
myst_parser/cli/: benchmark.py  spec.md
myst_parser/config/: _directives.py  dc_validators.py  main.py
myst_parser/mdit_to_docutils/: __init__.py  base.py  html_to_nodes.py  inventory.py  local_links.py  sphinx_.py  transforms.py  utils.py
myst_parser/parsers/: directives.py  docutils_.py  mdit.py  options.py  parse_html.py  sphinx_.py
myst_parser/sphinx_ext/: directives.py  main.py  mathjax.py  myst_refs.py  references.py
myst_parser/transforms/: local_links.py
tests/: conftest.py  sphinx_directives.json  test_anchors.py  test_cli.py  test_directive_line_mapping.py  test_docutils.py  test_docutils_renderer.py  test_html_parse.py  test_inventory.py  test_slugs.py
tests/benchmark/: run.py
tests/commonmark/: test_commonmark.py
tests/fixtures/: slugs.json
tests/jupyter_db/: test_populate.py
tests/jupyter_db/test_populate/: test_get_full_notebook.yml  test_populate.yml  test_sqla_visualise.dot
tests/jupyter_sphinx/: test_basic.py
tests/jupyter_sphinx/test_basic/: test_basic.txt  test_basic.xml  test_basic.yml
tests/sphinx/: test_sphinx_builds.py
tests/sphinx/test_sphinx_builds/: test_basic.html
tests/static/: objects_v1.inv  objects_v2.inv
tests/test_cli/: test_read_inv_options1_.yaml  test_read_inv_options2_.yaml  test_read_inv_options3_.yaml  test_read_inv_v1.yaml
tests/test_commonmark/: commonmark.json  spec.sh  test_commonmark.py
tests/test_docutils_renderer/: test_full_run.xml
tests/test_html/: html_ast.md  html_round_trip.md  html_to_nodes.md  test_html_to_nodes.py  test_parse_html.py
tests/test_inventory/: test_inv_cli_v1.yaml  test_inv_cli_v2_options0_.yaml  test_inv_cli_v2_options2_.yaml  test_inv_cli_v2_options3_.yaml  test_inv_cli_v2_options4_.yaml  test_inv_filter.yml  test_inv_filter_fnmatch.yml  test_inv_filter_wildcard.yml
tests/test_renderers/: conftest.py  sphinx_directives.json  sphinx_roles.json  test_docutils.py  test_docutils_renderer.py  test_error_reporting.py  test_fixtures.py  test_fixtures_docutils.py  test_fixtures_sphinx.py  test_html.py  test_include_directive.py  test_myst_config.py  test_myst_refs.py  test_nested_render.py  test_parse_directives.py  test_roles_directives.py  test_warnings_docutils.py
tests/test_renderers/fixtures/: amsmath.md  attributes.md  basic.md  containers.md  definition_lists.md  directive_options.md  directive_parsing.txt  docutil_directives.md  docutil_link_resolution.md  docutil_roles.md  docutil_section_refs.md  docutil_syntax_elements.md  docutil_syntax_extensions.txt  dollarmath.md  eval_rst.md  mock_include.md  mock_include_errors.md  myst-config.txt  myst_references.md  myst_references_latex.md  option_parsing.yaml  option_parsing_errors.yaml  reporter_warnings.md  role_options.md  sphinx_directives.md  sphinx_link_resolution.md  sphinx_roles.md  sphinx_syntax_elements.md  syntax_elements.md  tables.md  warnings_docutils.md
tests/test_renderers/test_docutils/: test_cross_referencing.xml  test_full_run.xml  test_link_def_in_directive_nested.xml
tests/test_renderers/test_myst_refs/: doc.xml  (+36 more)
tests/test_sphinx/: conftest.py  test_sphinx_builds.py
tests/test_syntax/: test_ast.py
(+202 files in other folders)
