[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup"
]
dependencies = [
    "docutils>=0.16,<0.21",
    "jinja2",  # required for substitutions, but let sphinx choose version
    "markdown-it-py~=3.0",
    "mdit-py-plugins~=0.4",
    "pyyaml",
    "sphinx>=6,<8"
]
dynamic = ["version", "description"]
keywords = [
    "markdown",
    "lexer",
    "parser",
    "development",
    "docutils",
    "sphinx"
]
license = {file = "LICENSE"}
name = "myst-parser"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
code_style = ["pre-commit~=3.0"]
# for use with "linkify" extension
linkify = ["linkify-it-py~=2.0"]
# Note: This is only required for internal use
rtd = [
    "ipython",
    "sphinx-book-theme==1.0.0rc2",
    "pydata-sphinx-theme==v0.13.0rc4",
    "sphinx-design2",
    "sphinx-copybutton",
    "sphinxext-rediraffe~=0.2.7",
    # TODO this can uncommented once https://github.com/mgaitan/sphinxcontrib-mermaid/issues/109 is fixed
    # "sphinxcontrib.mermaid~=0.7.1",
    "sphinxext-opengraph~=0.9.0",
    "sphinx-pyscript",
    "sphinx-tippy>=0.3.1",
    "sphinx-autodoc2~=0.5.0",
    "sphinx-togglebutton"
]
testing = [
    "beautifulsoup4",
    "coverage[toml]",
    "pytest>=7,<8",
    "pytest-cov",
    "pytest-regressions",
    "pytest-param-files~=0.6.0",
    "sphinx-pytest"
]
testing-docutils = [
    "pygments",
    "pytest>=7,<8",
    "pytest-param-files~=0.6.0"
]

[project.scripts]
myst-anchors = "myst_parser.cli:print_anchors"
myst-docutils-demo = "myst_parser.parsers.docutils_:cli_html5_demo"
myst-docutils-html = "myst_parser.parsers.docutils_:cli_html"
myst-docutils-html5 = "myst_parser.parsers.docutils_:cli_html5"
myst-docutils-latex = "myst_parser.parsers.docutils_:cli_latex"
myst-docutils-pseudoxml = "myst_parser.parsers.docutils_:cli_pseudoxml"
myst-docutils-xml = "myst_parser.parsers.docutils_:cli_xml"
myst-inv = "myst_parser.inventory:inventory_cli"

[project.urls]
Documentation = "https://myst-parser.readthedocs.io"
Homepage = "https://github.com/executablebooks/MyST-Parser"

[tool.coverage.run]
omit = ["*/_docs.py"]

[tool.flit.module]
name = "myst_parser"

[tool.flit.sdist]
exclude = [
    "docs/",
    "tests/"
]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["docutils.*", "yaml.*", "pygments.*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*The default for the setting.*:FutureWarning"
]

[tool.ruff]
extend-ignore = ["ISC001", "RUF005", "RUF012"]
extend-select = ["B0", "C4", "I", "ICN", "ISC", "N", "RUF", "SIM", "UP"]
