[metadata]
name = myst-parser
version = attr: myst_parser.__version__
description = An extended commonmark compliant parser, with bridges to docutils & sphinx.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/MyST-Parser
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords =
    markdown
    lexer
    parser
    development
    docutils
    sphinx
project_urls =
    Documentation=https://myst-parser.readthedocs.io

[options]
packages = find:
install_requires =
    docutils>=0.15,<0.18
    jinja2  # required for substitutions, but let sphinx choose version
    markdown-it-py>=1.0.0b3,<2.0.0
    mdit-py-plugins~=0.2.5
    pyyaml
    sphinx>=2.1,<4
python_requires = >=3.6
include_package_data = True
zip_safe = True

[options.entry_points]
console_scripts =
    myst-anchors = myst_parser.cli:print_anchors

[options.extras_require]
code_style =
    pre-commit~=2.12
# for use with "linkify" extension
linkify =
    linkify-it-py~=1.0
# Note: This is only required for internal use
rtd =
    ipython
    sphinx-book-theme~=0.1.0
    sphinx-panels~=0.5.2
    sphinxcontrib-bibtex~=2.1
# left in for back-compatability
sphinx =
testing =
    beautifulsoup4
    coverage
    docutils~=0.17.0  # this version changes some HTML tags
    pytest>=3.6,<4
    pytest-cov
    pytest-regressions

[flake8]
max-line-length = 100
extend-ignore = E203

[mypy]
show_error_codes = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
