[metadata]
name = myst-parser
version = attr: myst_parser.__version__
description = An extended commonmark compliant parser, with bridges to docutils & sphinx.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/MyST-Parser
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords =
    markdown
    lexer
    parser
    development
    docutils
    sphinx
project_urls =
    Documentation=https://myst-parser.readthedocs.io

[options]
packages = find:
install_requires =
    docutils>=0.15,<0.18
    jinja2  # required for substitutions, but let sphinx choose version
    markdown-it-py>=1.0.0,<3.0.0
    mdit-py-plugins~=0.3.0
    pyyaml
    sphinx>=3.1,<5
    typing-extensions
python_requires = >=3.7
include_package_data = True
zip_safe = True

[options.entry_points]
console_scripts =
    myst-anchors = myst_parser.cli:print_anchors
    myst-docutils-html = myst_parser.docutils_:cli_html
    myst-docutils-html5 = myst_parser.docutils_:cli_html5
    myst-docutils-latex = myst_parser.docutils_:cli_latex
    myst-docutils-xml = myst_parser.docutils_:cli_xml
    myst-docutils-pseudoxml = myst_parser.docutils_:cli_pseudoxml

[options.extras_require]
code_style =
    pre-commit~=2.12
# for use with "linkify" extension
linkify =
    linkify-it-py~=1.0
# Note: This is only required for internal use
rtd =
    ipython
    sphinx-book-theme~=0.1.0
    sphinx-panels~=0.5.2
    sphinxcontrib-bibtex~=2.1
    sphinxext-rediraffe~=0.2
    sphinxcontrib.mermaid~=0.6.3
    sphinxext-opengraph~=0.4.2
testing =
    beautifulsoup4
    coverage
    docutils~=0.17.0  # this version changes some HTML tags
    pytest>=6,<7
    pytest-cov
    pytest-regressions
    pytest-param-files~=0.3.4

[flake8]
max-line-length = 100
extend-ignore = E203

[mypy]
show_error_codes = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true

[mypy-docutils.*]
ignore_missing_imports = True

[mypy-yaml.*]
ignore_missing_imports = True
